--- a/flask-app/app/templates/photos.html
+++ b/flask-app/app/templates/photos.html
@@ -3,6 +3,15 @@
   Photos
 {% endblock %}
 
+{% block navbar %}
+<li class="nav-item active">
+  <a class="nav-link" href="/photos">Fotos</a>
+</li>
+<li class="nav-item">
+  <a class="nav-link" href="/contacts">Clientes</a>
+</li>
+{% endblock %}
+
 {% block main %}
   <div class="container-fluid">
     <div class="row" >
