--- a/flask-app/app/templates/photos.html
+++ b/flask-app/app/templates/photos.html
@@ -19,8 +19,8 @@
         <form action="/photos" method="POST" enctype="multipart/form-data">
           <div class="form-group">
             <div class="input-group">
-              <input type="file" name="photo" id="photo">
-              <label class="custom-file-label" for="photo">Elegir foto</label>
+              <label for="photo">Elegir foto</label>
+              <input class="form-control-file" type="file" name="photo" id="photo">
             </div>
           </div>
           <div class="form-group">
